{
    "name": "Inputs",
    "maps": [
        {
            "name": "CameraMovement",
            "id": "5c095c04-5327-4199-af11-36804bc3c80d",
            "actions": [
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "383e912f-686e-48fc-a061-c1d4b65fdcde",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.5,behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "31ce2eda-6b65-42b9-9602-0634280a9dd1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "a9b9f166-a966-4330-8f50-0d8a8450ce5d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "86d86362-aa33-41f6-821a-82e3c4b42dc9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "ZoomIn",
                    "type": "Button",
                    "id": "c5bb8c61-a570-440a-b64f-0ffb98fb76b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "ZoomOut",
                    "type": "Button",
                    "id": "cf602557-e83c-4614-85ca-dbb024c6d0f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "560508c6-41a6-4317-9e0f-d822ecffd0f4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b4f45c8-2f04-4147-976f-6cecb57d1f64",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82066837-023b-404e-8dab-2cfe5e7537c0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8101698-5aa8-4b7d-9db0-55e8a88da611",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e405f8af-a15d-4c9e-992f-221ce088c7d4",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomIn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cdd4cdd9-9d2e-4e12-9313-586b34c0e283",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Pause",
            "id": "6daf85ab-df76-4141-b873-dc96da0cd891",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": []
}